# dice

./: .dockerignore  .gitignore  .project  Dockerfile  README.md  build.sh  config.txt  docker-compose.yml  pom-parent.xml  pom.xml  pom.xml~
.github/workflows/: maven.yml
common/: pom.xml
common/src/main/java/dice/common/: DiceException.java
core/: pom.xml  pom.xml~
core/src/main/java/: module-info.java
core/src/main/java/dice/core/: DiceRoller.java
core/src/main/java/tim/: Dice.java  Request.java
core/src/test/java/dice/core/: DiceRollerTests.java
database/: pom.xml
database/src/main/resources/: database.env  init.sql
installer/: pom.xml
native/: .cproject  .project  CMakeLists.txt  assembly.xml  pom.xml
native/src/: DiceRoller.cpp  DiceRoller.h  DiceRollerImpl.cpp  DiceRollerImpl.hpp  SpecDefs.hpp
process/: pom.xml
process/src/main/java/tim/: Request.java  Request.java~
service/: .classpath  Dockerfile  pom.xml
service/src/main/app/: package-lock.json  package.json  tsconfig.json
service/src/main/app/public/: index.html
service/src/main/app/src/: App.css  App.tsx  Dice.tsx  index.css  index.tsx
service/src/main/app/src/actions/: ActionType.tsx
service/src/main/app/src/containers/: AddDiceModal.css  AddDiceModal.tsx  ButtonContainer.css  ButtonContainer.tsx  DiceListContainer.css  DiceListContainer.tsx  SaveDiceModal.tsx  SelectDiceModal.tsx
test/: pom.xml
ui/: pom.xml  pom.xml~
ui/src/main/java/: module-info.java
ui/src/main/java/dice/ui/: DiceApp.java  (+4 more)
ui/src/main/java/tim/: CustomFont.java  Window.java  Window.java~
(+69 files in other folders)
