CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

# Project name
PROJECT("Dice Native" VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

# JNI.
FIND_PACKAGE(JNI)
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH} ${JAVA_INCLUDE_PATH2})

# Source files.
INCLUDE_DIRECTORIES(src)
AUX_SOURCE_DIRECTORY(src SRC)

# Build shared object.
ADD_LIBRARY(dice SHARED ${SRC})

target_compile_options(dice PRIVATE -Wpedantic -Werror -Wall -Wextra)
