CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

# Project name
PROJECT("Dice Native" VERSION 1.0.0 LANGUAGES CXX)

# Default to release build.
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
MESSAGE("-- Using configuration: " ${CMAKE_BUILD_TYPE})

# Set build options.
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_CXX_FLAGS "-Wpedantic -Wall -Wextra -Werror")
SET(CMAKE_CXX_FLAGS_DEBUG "-g")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

# JNI.
FIND_PACKAGE(JNI)
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH} ${JAVA_INCLUDE_PATH2})

# Source files.
INCLUDE_DIRECTORIES(src)
AUX_SOURCE_DIRECTORY(src SRC)

# Build shared object.
ADD_LIBRARY(dice SHARED ${SRC})
